RESOLVED FIXED138530
Context menus should not offer the "Download video" option for videos that cannot be downloaded
https://bugs.webkit.org/show_bug.cgi?id=138530
Summary Context menus should not offer the "Download video" option for videos that ca...
Beth Dakin
Reported 2014-11-07 17:34:29 PST
Context menus should not offer the "Download video" option for videos that cannot be downloaded
Attachments
WIP patch (13.84 KB, patch)
2014-11-13 07:36 PST, Eric Carlson
no flags
Patch (17.92 KB, patch)
2014-11-13 16:18 PST, Beth Dakin
thorton: review+
Radar WebKit Bug Importer
Comment 1 2014-11-08 10:52:24 PST
Eric Carlson
Comment 2 2014-11-13 07:36:25 PST
Created attachment 241484 [details] WIP patch
Beth Dakin
Comment 3 2014-11-13 16:18:18 PST
Created attachment 241517 [details] Patch I took over this patch from Eric. Eric wanted to write a test, but I don't think it is possible to capture this with a layout test. oncontextmenu will allow you to override the context menu action, but it doesn't let you see what is in the default menu. I also made one small change that should keep GTK building.
Beth Dakin
Comment 4 2014-11-13 16:49:34 PST
Éva Balázsfalvi
Comment 5 2014-11-14 02:46:18 PST
*** Bug 138734 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.