Source/WebKit2/WebProcess/InjectedBundle/InjectedBundleHitTestResult.h
@@ -55,6 +55,7 @@ public:
     String absoluteMediaURL() const;
     bool mediaIsInFullscreen() const;
     bool mediaHasAudio() const;
+    bool isDownloadableMedia() const;
     BundleHitTestResultMediaType mediaType() const;
 
     String linkLabel() const;
